# TimeShiftX

./: CMakeLists.txt
docs/: ChronosStream Core Task Todo List.md  IPTV 多协议核心解析与回看生成模块.md
docs/delivery/: Phase6 Delivery Guide.md
example/: main.cpp
include/chronosstream/catchup/: catchup_engine.hpp
include/chronosstream/core/: errors.hpp  logger.hpp  types.hpp
include/chronosstream/epg/: epg_manager.hpp
include/chronosstream/facade/: playback_facade.hpp
include/chronosstream/net/: http_client.hpp
include/chronosstream/parser/: isource_parser.hpp  m3u_parser.hpp  xtream_codes_parser.hpp
include/chronosstream/utils/: time_utils.hpp
include/timeshiftx/: catchup_engine.hpp  epg_manager.hpp  errors.hpp  http_client.hpp  isource_parser.hpp  logger.hpp  m3u_parser.hpp  playback_facade.hpp  request_queue.hpp  time_utils.hpp  types.hpp  xtream_codes_parser.hpp
src/: main.cpp
src/catchup/: catchup_engine.cpp
src/epg/: epg_manager.cpp
src/facade/: playback_facade.cpp
src/net/: http_client.cpp  request_queue.cpp
src/parser/: m3u_parser.cpp  xtream_codes_parser.cpp
src/utils/: time_utils.cpp
tests/: smoke_test.cpp
tests/boundary/: boundary_conditions_test.cpp
tests/catchup/: catchup_engine_test.cpp
tests/epg/: epg_manager_test.cpp
tests/facade/: playback_facade_test.cpp
tests/integration/: end_to_end_test.cpp
tests/parser/: m3u_parser_test.cpp  xtream_codes_parser_test.cpp
tests/perf/: perf_benchmark_test.cpp
